[project]
name = "md-to-pdf-docx"
version = "0.1.0"
description = "One-shot Markdown -> PDF + DOCX converter with rendered Mermaid diagrams sized for A4."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "markdown>=3.6",
    "pymdown-extensions>=10.7",
    "Pygments>=2.17",
    "Pillow>=10.2",
    "xhtml2pdf>=0.2.15",
    "pypandoc-binary>=1.13",
]

[project.scripts]
md2both = "convert:main"
